EATON-600: fixed problem with ios and flex-wrap

--- a/eaton.frontend/src/components/list/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-default.scss
@@ -195,7 +195,7 @@
     .slick-track {
       display: flex;
       flex-direction: row;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
     }
 
     .slick-slide {
